# page

./: Cargo.toml
pages/: auth.html  bad_request.html  header.html  index.html  login.html  not_auth.html  not_found.html  registration.html  showcase.html
src/: main.rs
styles/: style.css
