[package]
name = "web_page_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0", features = ["io"] }
axum = "0"
axum-extra = { version = "0", features = ["cookie"] }
tower = { version = "0.5.0", features = ["limit"] }
tower-http = { version = "0.5.2", features = ["timeout", "compression-full", "trace"] }
serde = { version = "1.0.209", features = ["derive"] }
mime_guess = "2"
sqlx = { version = "<0.8.1", features = ["runtime-tokio", "postgres"] }
sha2 = "0"
rand = "0"
base16ct = { version = "0", features = ["alloc"] }
email_address = "0"
time = "0"
tracing-subscriber = "0"
tracing = "0"

[profile.release]
strip = "debuginfo"
panic = "abort"
opt-level = 3
codegen-units = 1