[package]
name = "web_page_axum"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
tokio-util = { version = "0", features = ["io"] }
axum = { version = "0", features = ["http1", "http2", "form", "tokio"], default-features = false }
axum-extra = { version = "0", features = ["cookie"], default-features = false }
tower = { version = "0.5.0", features = ["limit"] }
tower-http = { version = "0.5.2", features = ["timeout", "compression-full", "trace"] }
serde = { version = "1.0.209", features = ["derive"], default-features = false }
mime_guess = "2"
sqlx = { version = "<0.8.1", features = ["runtime-tokio", "postgres"], default-features = false }
sha2 = { version = "0", default-features = false }
rand = { version = "0", default-features = false }
base16ct = { version = "0", features = ["alloc"], default-features = false }
email_address = { version = "0", default-features = false }
time = { version = "0", default-features = false }
tracing-subscriber = { version = "0", features = ["std", "fmt"], default-features = false }
tracing = { version = "0", default-features = false }

[profile.release]
strip = "debuginfo"
panic = "abort"
opt-level = 3
codegen-units = 1